--- a/configs/config_000.json
+++ b/configs/config_000.json
@@ -9,18 +9,16 @@
     "fig_dpi": 300,
 
     "databuilder": {
-        "obs_source": "BEST",
-
+        
         "input_vars": ["PRECT", "TS"],
         "input_region": [[-15.0, 15.0, 40.0, 300.0],
                          [-15.0, 15.0, 40.0, 300.0]],
         "input_mask": ["None", "ocean"],
-
         "ensembles": ["ens1", "ens2", "ens3"],
         "target_var": "PRECT",
         "target_region": [47.6, 122.0],
-        "target_months": [4, 5, 6, 7, 8, 9]
-
+        "target_months": [4, 5, 6, 7, 8, 9],
+        "averaging_length": 7
         
     }
 }
