--- a/configs/config_000.json
+++ b/configs/config_000.json
@@ -11,6 +11,7 @@
     "databuilder": {
         
         "input_vars": ["PRECT", "TS"],
+        "data_range": [1900, 1950],
         "input_region": [[-15.0, 15.0, 40.0, 300.0],
                          [-15.0, 15.0, 40.0, 300.0]],
         "input_mask": ["None", "ocean"],
