--- a/configs/config_000.json
+++ b/configs/config_000.json
@@ -20,7 +20,8 @@
         "target_var": "PRECT",
         "target_region": [47.6, 122.0],
         "target_months": [4, 5, 6, 7, 8, 9],
-        "averaging_length": 7
+        "averaging_length": 7,
+        "lagtime": 10
         
     }
 }
