"Updated multi input organizer function to include high-res ENSO and resave pkl files. Fixed lead/lag mismatch"

--- a/configs/config_002.json
+++ b/configs/config_002.json
@@ -16,7 +16,8 @@
 
     "databuilder": {
         
-        "input_vars": ["RMM1", "RMM2", "NINO34"],
+        "input_vars": ["PRECT"],
+        "network_inputs": ["RMM1", "RMM2", "Nino34"],
         "input_region": "None",
         "input_mask": ["None"],
         "ensembles": ["ens1", "ens2", "ens3"],
