--- a/configs/config_003.json
+++ b/configs/config_003.json
@@ -1,4 +1,4 @@
-{"expname": "exp002",
+{"expname": "exp003",
     "device": "gpu",
     "seed_list": [7],
 
@@ -43,10 +43,10 @@
         "basic_act": ["ReLU", "ReLU"],
 
         "hiddens_block_in": [3, 3],
-        "hiddens_block_out": [2, 2],
+        "hiddens_block_out": 5,
         "hiddens_block_act": ["ReLU", "ReLU"],
 
-        "hiddens_final_in": 2,
+        "hiddens_final_in": 5,
         "hiddens_final_out": 4,
         "hiddens_final_act": "ReLU"
     }, 
@@ -54,7 +54,7 @@
     "optimizer": {
         "type": "Adam",
         "args": {
-            "lr": 0.001,
+            "lr": 0.0001,
             "weight_decay": 0.07,
             "amsgrad": false
         }
