--- a/configs/config_003.json
+++ b/configs/config_003.json
@@ -1,5 +1,5 @@
 {"expname": "exp003",
-    "device": "gpu",
+    "device": "mps",
     "seed_list": [7],
 
     "data_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/",
@@ -52,21 +52,20 @@
     }, 
 
     "optimizer": {
-        "type": "Adam",
+        "type": "ASGD",
         "args": {
             "lr": 0.0001,
-            "weight_decay": 0.055,
-            "amsgrad": false
+            "weight_decay": 0.0
         }
     },
 
     "trainer": {
-        "max_epochs": 40,
+        "max_epochs": 150,
         "save_dir": "/Users/C830793391/Documents/Research/E3SM/saved/",
         "early_stopping":{
             "args":{
                 "patience": 5,
-                "min_delta": 0.001
+                "min_delta": 0.0
             }
         }
     }
