--- a/configs/config_006.json
+++ b/configs/config_006.json
@@ -2,7 +2,7 @@
     "device": "mps",
     "seed_list": [7],
 
-    "data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/",
+    "data_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/",
     "figure_dir": "/Users/C830793391/Documents/Research/E3SM/visuals/",
     "model_dir": "/Users/C830793391/Documents/Research/E3SM/saved/models",
     "output_dir": "/Users/C830793391/Documents/Research/E3SM/saved/output",
@@ -26,7 +26,9 @@
         "target_region": [46.5, 49, 241.5, 243.5],
         "target_months": [4, 5, 6, 7, 8, 9],
         "averaging_length": 7,
-        "lagtime": 14
+        "lagtime": 14, 
+        "front_cutoff": 121, 
+        "back_cutoff": 32
         
     }, 
 
@@ -60,7 +62,7 @@
     },
 
     "trainer": {
-        "max_epochs": 1000,
+        "max_epochs": 4000,
         "save_dir": "/Users/C830793391/Documents/Research/E3SM/saved/",
         "early_stopping":{
             "args":{
