Ran CNN successfully for the first time with global 2m Temp and Precip from E3SM!!

--- a/configs/config_007.json
+++ b/configs/config_007.json
@@ -40,23 +40,24 @@
 
         "data_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/", 
         "perlmutter_data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
-        "batch_size": 64
+        "batch_size": 32
     }, 
 
     "arch": {
         "type": "cnn",
-        "n_inputchannel": 1,
+        "n_inputchannel": 2,
         "freeze_id" : ["tau"],
         "circular_padding": [15, 15, 0, 0],
         "filters" : [32, 32, 32], 
         "kernel_size": [3, 3, 3],
-        "cnn_act": ["ReLU", "ReLU", "ReLu"],
+        "cnn_act": ["ReLU", "ReLU", "ReLU"],
 
-        "hiddens_block_in": [10, 10, 10],
+        "hiddens_block": [10, 10, 10],
+        "hiddens_block_in": [36064, 10, 10],
         "hiddens_block_act": ["ReLU", "ReLU", "ReLU"],
-        "hiddens_block_out": 6,
+        "hiddens_block_out": 10,
 
-        "hiddens_final_in": 6,
+        "hiddens_final_in": 10,
         "hiddens_final_out": 4,
         "hiddens_final_act": "ReLU"
     }, 
@@ -70,7 +71,7 @@
     },
 
     "trainer": {
-        "max_epochs": 4000,
+        "max_epochs": 1000,
         "save_dir": "/Users/C830793391/Documents/Research/E3SM/saved/",
         "perlmutter_save_dir": "/pscratch/sd/p/plutzner/E3SM/saved/models",
         "early_stopping":{
