Ran successful CNN with global inputs! Working on getting analyis file to run smoothly. Current bug in ENSO_indices_calculator eliminating non-zero values.

--- a/configs/config_007.json
+++ b/configs/config_007.json
@@ -5,7 +5,7 @@
     "data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata",
     "perlmutter_inputs_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
     "local_inputs_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/Network Inputs/",
-    "figure_dir": "/Users/C830793391/Documents/Research/E3SM/visuals/",
+    "figure_dir": "/Users/C830793391/Documents/Research/E3SM/saved/figures",
     "model_dir": "/Users/C830793391/Documents/Research/E3SM/saved/models",
     "output_dir": "/Users/C830793391/Documents/Research/E3SM/saved/output",
     "fig_dpi": 300,
@@ -48,13 +48,13 @@
         "n_inputchannel": 2,
         "freeze_id" : ["tau"],
         "circular_padding": [15, 15, 0, 0],
-        "filters" : [32, 32, 32], 
-        "kernel_size": [3, 3, 3],
-        "cnn_act": ["ReLU", "ReLU", "ReLU"],
+        "filters" : [32, 32], 
+        "kernel_size": [3, 3],
+        "cnn_act": ["ReLU", "ReLU"],
 
-        "hiddens_block": [10, 10, 10],
-        "hiddens_block_in": [36064, 10, 10],
-        "hiddens_block_act": ["ReLU", "ReLU", "ReLU"],
+        "hiddens_block": [10, 10],
+        "hiddens_block_in": [141120],
+        "hiddens_block_act": ["ReLU"],
         "hiddens_block_out": 10,
 
         "hiddens_final_in": 10,
@@ -76,7 +76,7 @@
         "perlmutter_save_dir": "/pscratch/sd/p/plutzner/E3SM/saved/models",
         "early_stopping":{
             "args":{
-                "patience": 5,
+                "patience": 80,
                 "min_delta": 0.0
             }
         }
